# fastapi-views

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: docs.yaml  publish.yaml  release.yaml  tests.yaml
docs/: index.md
docs/reference/: cache.md  decorators.md  exceptions.md  filters.md  generics.md  models.md  pagination.md  views.md  viewsets.md  websockets.md
docs/usage/: auth.md  basic.md  cache.md  filters.md  generics.md  i18n.md  opentelemetry.md  sse.md  viewset.md  websockets.md
examples/: app.py  basic.py  cache.py  generics.py  i18n.py  opentelemetry.py  sse.py  viewset.py  websockets.py
fastapi_views/: __init__.py  _version.py  cli.py  config.py  exceptions.py  handlers.py  middlewares.py  models.py  opentelemetry.py  pagination.py  prometheus.py  router.py  routers.py  serializer.py  types.py
fastapi_views/auth/: __init__.py  abc.py  api_key.py  auth0.py  jwt.py  scopes.py
fastapi_views/cache/: __init__.py  abc.py  cache.py  memory.py  middleware.py  redis.py  serializers.py  view.py
fastapi_views/cache/backends/: __init__.py  abc.py  memory.py  redis.py
fastapi_views/errors/: exceptions.py  handlers.py  models.py
fastapi_views/filters/: __init__.py  dependencies.py  models.py  operations.py  types.py
fastapi_views/filters/resolvers/: abc.py  objects.py  sql.py  sqlalchemy.py
fastapi_views/i18n/: __init__.py  formatter.py  jinja2.py  locale.py  middleware.py  translations.py  types.py
fastapi_views/logging/: __init__.py  _compat.py  config.py  middleware.py
fastapi_views/security/: __init__.py  api_key.py  auth.py  auth0.py  jwt.py  oauth2.py  password.py  scopes.py  types.py  user.py  utils.py  validator.py
fastapi_views/security/validators/: __init__.py  abc.py  auth0.py  joserfc.py
fastapi_views/views/: __init__.py  api.py  cache.py  functools.py  generics.py  mixins.py  sse.py  viewsets.py  websockets.py
features/: index.html
reference/decorators/: index.html
reference/exceptions/: index.html
reference/filters/: index.html
reference/generics/: index.html
reference/models/: index.html
reference/pagination/: index.html
reference/views/: index.html
reference/viewsets/: index.html
reference/websockets/: index.html
search/: search_index.json
tests/: conftest.py  test_api_views.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_exceptions.py  test_filters.py  test_functools.py  test_generics.py  test_handlers.py  test_i18n.py  test_models.py  test_opentelemetry.py  test_pagination.py  test_router.py  test_security.py  test_sqlalchemy_resolver.py  test_sync_generics.py  test_sync_views.py  test_version.py  test_websockets.py  utils.py
usage/: index.html
usage/auth/: index.html
usage/basic/: index.html
usage/filters/: index.html
usage/generics/: index.html
usage/i18n/: index.html
usage/opentelemetry/: index.html
usage/sse/: index.html
usage/viewset/: index.html
usage/websockets/: index.html
